Fix warnings and improve releaseZip